<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vishnubk.sharjahcharity.ui.DetailPageActivity"
    tools:showIn="@layout/activity_detail_page">
     <android.support.v7.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/text_margin"
                 android:id="@+id/amount"
                 android:text="@string/amount_req"
                 android:textSize="25sp" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/text_margin"
                 android:id="@+id/expiry_date"
                 android:text="@string/last_date"
                 android:textSize="25sp"
                 android:gravity="center_horizontal" />

         </LinearLayout>
          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="horizontal">
            <View
             android:layout_width="0dp"
                android:layout_weight="5"
             android:layout_height="1dp"
             android:background="@color/colorDivider"
              android:layout_marginLeft="10dp"></View>
              <View
                  android:layout_width="0dp"
                  android:layout_weight="1"
                  android:layout_height="1dp"></View>
              <View
                  android:layout_width="0dp"
                  android:layout_weight="5"
                  android:layout_height="1dp"
                  android:background="@color/colorDivider"
                  android:layout_marginRight="10dp"></View>
          </LinearLayout>
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/text_margin"
                 android:id="@+id/rec_amount"
                 android:text="@string/amount_rec"
                 android:textSize="25sp" />
             <TextView
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:layout_margin="@dimen/text_margin"
                 android:id="@+id/donation"
                 android:text="@string/donation_no"
                 android:textSize="25sp"
                 android:gravity="center_horizontal" />

         </LinearLayout>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
             android:id="@+id/content"
             android:text="@string/detail_text" />


     </android.support.v7.widget.LinearLayoutCompat>



</android.support.v4.widget.NestedScrollView>
