<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_donator_detail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.vishnubk.sharjahcharity.ui.DonatorDetailActivity"
    tools:showIn="@layout/activity_donator_detail">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/bottom_button">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/editName"
                    style="@style/TextLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:ems="10"
                    android:hint="@string/donator_name"
                    android:inputType="text"
                    android:focusable="true"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="200">

                <EditText
                    android:id="@+id/editAddress"
                    style="@style/TextLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="0dp"
                    android:ems="10"
                    android:hint="@string/donator_description"
                    android:inputType="text"
                    android:maxLength="200" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <EditText
                android:id="@+id/editNumber"
                style="@style/TextLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:ems="10"
                android:hint="@string/donator_number"
                android:inputType="phone"
                android:maxLength="10" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                    android:id="@+id/txtDatePicker"
                    style="@style/TextLine"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/donator_date" />



        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>



</LinearLayout>
